--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=menu
+
+# Configuração do MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/restaurante_db
+spring.datasource.username=root
+spring.datasource.password=rafaeltor123?
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Configuração do JPA (Hibernate)
+# update: cria as tabelas se não existirem
+spring.jpa.hibernate.ddl-auto=update
+# show-sql: mostra no console os comandos que o Java está a enviar
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
